<resources>
    <string name="app_name">Gasto de Viagem</string>
    <string name="distancia">Distância</string>
    <string name="total_de_kilometros">Total de Kilômetros</string>
    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço por Litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="km_s_por_litro">KM\'s por litro</string>
    <string name="seu_gasto_total_sera_de">Seu gasto total será de</string>
    <string name="calcular">Calcular</string>
    <string name="rs">R$ 0</string>
    <string name="preencha_todos_os_campos">Preencha todos os Campos</string>
    <string name="informe_valores_validos">Por favor, informe valores váilodos</string>
</resources>